--- a/modulo-3/ex022/fundo006.html
+++ b/modulo-3/ex022/fundo006.html
@@ -11,7 +11,7 @@
         background-color: black;
         background-image: url('imagens/wallpaper002.jpg');
         background-position: center center;
-        background-repeat: no-repeat;
+        background-repeat: repeat-y;
         background-size: cover;
       }
       main {
@@ -27,6 +27,42 @@
   <body>
     <main>
       <h1>Teste de Imagem de Fundo</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus incidunt
+        nemo magni deleniti optio voluptates sit adipisci pariatur, qui animi
+        suscipit nam sapiente eum nisi accusantium dolorem recusandae atque id!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta
+        assumenda quae odio doloribus in sit eveniet, qui rem debitis neque
+        aliquam laboriosam deserunt. Ducimus ad aperiam recusandae, voluptates
+        esse natus? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Nesciunt debitis aspernatur placeat quaerat similique quas ab beatae quo
+        quam, nisi repellendus est voluptatibus fugiat dolor rem eveniet numquam
+        officiis! Accusantium.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus incidunt
+        nemo magni deleniti optio voluptates sit adipisci pariatur, qui animi
+        suscipit nam sapiente eum nisi accusantium dolorem recusandae atque id!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta
+        assumenda quae odio doloribus in sit eveniet, qui rem debitis neque
+        aliquam laboriosam deserunt. Ducimus ad aperiam recusandae, voluptates
+        esse natus? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Nesciunt debitis aspernatur placeat quaerat similique quas ab beatae quo
+        quam, nisi repellendus est voluptatibus fugiat dolor rem eveniet numquam
+        officiis! Accusantium.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus incidunt
+        nemo magni deleniti optio voluptates sit adipisci pariatur, qui animi
+        suscipit nam sapiente eum nisi accusantium dolorem recusandae atque id!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta
+        assumenda quae odio doloribus in sit eveniet, qui rem debitis neque
+        aliquam laboriosam deserunt. Ducimus ad aperiam recusandae, voluptates
+        esse natus? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Nesciunt debitis aspernatur placeat quaerat similique quas ab beatae quo
+        quam, nisi repellendus est voluptatibus fugiat dolor rem eveniet numquam
+        officiis! Accusantium.
+      </p>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus incidunt
         nemo magni deleniti optio voluptates sit adipisci pariatur, qui animi
