--- a/modulo-3/ex022/fundo006.html
+++ b/modulo-3/ex022/fundo006.html
@@ -8,10 +8,19 @@
     <style>
       body {
         height: 100vh;
-        background-color: black;
+        /*background-color: black;
         background-image: url('imagens/wallpaper002.jpg');
         background-position: center center;
-        background-repeat: repeat-y;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;*/
+
+        /* Shorthand - backgroud
+        color > image > position > repeat > [size] > attachment       
+        */
+
+        background: black url('imagens/wallpaper002.jpg') center center
+          no-repeat fixed;
         background-size: cover;
       }
       main {
